added footer and recent posts sidebar

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -15,20 +15,15 @@
         a {
           color: $dark-gray;
 
-          &.instagram:hover {
+          &.soundcloud:hover {
             color: #e95950;
           }
-          &.facebook:hover {
-            color: rgb(66, 103, 178);
-          }
+
           &.twitter:hover {
             color: rgb(56, 161, 243);
           }
-          &.google:hover {
+          &.apple-music:hover {
             color: rgb(221, 75, 57);
-          }
-          &.linkedin:hover {
-            color: rgb(0, 119, 181);
           }
         }
       }
